--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "portfolio",
+  "name": "threejs-journey-exercise",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "build": "vite build"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "@vitejs/plugin-react": "4.0",
+    "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "@react-three/drei": "^9.77.4",
+    "@react-three/fiber": "^8.13.0",
+    "gsap": "^3.12.2",
+    "r3f-perf": "^7.1.2",
+    "react": "18.2",
+    "react-dom": "18.2",
+    "split-type": "^0.3.3",
+    "three": "^0.153.0",
+    "vanilla-tilt": "^1.8.1"
   }
 }
