--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2",
     "split-type": "^0.3.3",
     "three": "^0.153.0",
-    "vanilla-tilt": "^1.8.1"
+    "vanilla-tilt": "^1.8.1",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
